{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 13,
  "lineage": "9b89d835-b7dc-e08e-17dd-eebfa113e844",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:internet-gateway/igw-0c135d4acf156e92a",
            "id": "igw-0c135d4acf156e92a",
            "owner_id": "218317313594",
            "tags": {
              "Name": "igw_terraform"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:route-table/rtb-040283214a5f4bff1",
            "id": "rtb-040283214a5f4bff1",
            "owner_id": "218317313594",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:route-table/rtb-0aefcc03ca077cd72",
            "id": "rtb-0aefcc03ca077cd72",
            "owner_id": "218317313594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c135d4acf156e92a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07284d3371179054f",
            "route_table_id": "rtb-040283214a5f4bff1",
            "subnet_id": "subnet-0c17743dcada63edd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb479dac21bb8fbd",
            "route_table_id": "rtb-0aefcc03ca077cd72",
            "subnet_id": "subnet-01dfbb281fd2d5b8b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad6db6f21264add0",
            "route_table_id": "rtb-0aefcc03ca077cd72",
            "subnet_id": "subnet-0cbfe19643f9dd5d1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:subnet/subnet-0c17743dcada63edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c17743dcada63edd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218317313594",
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:subnet/subnet-01dfbb281fd2d5b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01dfbb281fd2d5b8b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218317313594",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:subnet/subnet-0cbfe19643f9dd5d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cbfe19643f9dd5d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218317313594",
            "tags": {
              "Name": "public-c"
            },
            "tags_all": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-049acdee4715e3570"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:218317313594:vpc/vpc-049acdee4715e3570",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0327530eff318a278",
            "default_route_table_id": "rtb-06efa659e0832d450",
            "default_security_group_id": "sg-069917b54a3b59de2",
            "dhcp_options_id": "dopt-dafeb3bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-049acdee4715e3570",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06efa659e0832d450",
            "owner_id": "218317313594",
            "tags": {
              "Name": "terraform-main"
            },
            "tags_all": {
              "Name": "terraform-main"
            }
          }
        }
      ]
    }
  ]
}